fixed build with new build framework

--- a/libyui-qt-graph/CMakeLists.txt
+++ b/libyui-qt-graph/CMakeLists.txt
@@ -1,23 +1,45 @@
+CMAKE_MINIMUM_REQUIRED( VERSION 2.8 )
 
-cmake_minimum_required(VERSION 2.4)
+INCLUDE( "${CMAKE_SOURCE_DIR}/PROJECTINFO.cmake" )
 
+SET( BUILDTOOLS_DIR "buildtools/" )
 
-PROJECT(yast2-qt-graph)
-SET( CMAKE_MODULE_PATH "${CMAKE_INSTALL_PREFIX}/share/cmake/Modules" ${CMAKE_MODULE_PATH} )
+IF( NOT PREFIX )
+  SET( PREFIX "/usr" )
+ENDIF( NOT PREFIX )
 
-SET( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -Wall -Woverloaded-virtual" )
-SET( CMAKE_C_FLAGS   "${CMAKE_C_FLAGS}   -g -Wall" )
-set( CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -DQT_NO_DEBUG -DNDEBUG")
+IF( PLUGINNAME )
+  SET( BUILDTOOLS_DIR "${PREFIX}/share/lib${BASELIB}/${BUILDTOOLS_DIR}" )
+ELSE( PLUGINNAME )
+  SET( BUILDTOOLS_DIR "${CMAKE_SOURCE_DIR}/${BUILDTOOLS_DIR}" )
+ENDIF( PLUGINNAME )
 
-SET( RPMNAME "yast2-qt-graph" )
+SET( CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake/Modules" "${BUILDTOOLS_DIR}" "${CMAKE_MODULE_PATH}" )
 
-FIND_PACKAGE(Qt4 REQUIRED)
-FIND_PACKAGE(Yast)
-FIND_PACKAGE(Libyui REQUIRED)
-INCLUDE(YastCommon)
+INCLUDE( LibyuiCommon )
+INCLUDE( "${CMAKE_CURRENT_SOURCE_DIR}/VERSION.cmake" )
 
-SET(Y2QT_LOCALEDIR ${CMAKE_INSTALL_PREFIX}/share/locale)
+INITIALIZE()
 
-GENERATE_PACKAGING(${RPMNAME} ${VERSION})
+PROJECT( "${PROJECTNAME}" )
 
-ADD_SUBDIRECTORY(src)
+INCLUDE( "${CMAKE_CURRENT_SOURCE_DIR}/SOURCECONF.cmake" )
+
+SET_OPTIONS()
+SET_ENVIRONMENT()
+SET_BUILD_FLAGS()
+SET_AUTODOCS()
+
+IF( NOT DOCS_ONLY )
+  FIND_LIB_DEPENDENCIES()
+  FIND_LINKER_LIBS()
+  CHECK_PREFIX()
+  SET_SUBDIRS()
+  GEN_EXPORTS()
+  GEN_FILES()
+  PREP_SPEC_FILES()
+  SET_INSTALL_TARGET()
+  PREP_OBS_TARBALL()
+ENDIF( NOT DOCS_ONLY )
+
+SUMMARY()
