--- a/libyui-qt-graph/libyui-qt-graph.spec.in
+++ b/libyui-qt-graph/libyui-qt-graph.spec.in
@@ -116,5 +116,7 @@ rm -rf "$RPM_BUILD_ROOT"
 %{_prefix}/include/yui
 %{_libdir}/pkgconfig/@PROJECTNAME@.pc
 %{_libdir}/cmake/@PROJECTNAME@
+%doc %{_docdir}/@PROJECTNAME@@SONAME_MAJOR@/examples
+
 
 %changelog
