--- a/libyui-qt-pkg/CMakeLists.txt
+++ b/libyui-qt-pkg/CMakeLists.txt
@@ -22,6 +22,7 @@ INCLUDE( "${CMAKE_CURRENT_SOURCE_DIR}/VERSION.cmake" )
 INITIALIZE()
 
 PROJECT( "${PROJECTNAME}" )
+ADD_DEFINITIONS(-DVERSION="${VERSION}")
 
 INCLUDE( "${CMAKE_CURRENT_SOURCE_DIR}/SOURCECONF.cmake" )
 
