--- a/libyui/libyui.spec.in
+++ b/libyui/libyui.spec.in
@@ -22,7 +22,7 @@
 Name:		@PROJECTNAME@
 Version:	@VERSION@
 Release:	0
-License:	LGPL-2.1
+License:	LGPL-2.1 or LGPL-3.0
 Source:		@PROJECTNAME@-%{version}.tar.bz2
 Group:		System/Libraries
 
