--- a/libyui/buildtools/template-doc.spec.in
+++ b/libyui/buildtools/template-doc.spec.in
@@ -28,6 +28,7 @@ BuildRequires:  doxygen
 BuildRequires:  fdupes
 BuildRequires:  graphviz-gnome
 BuildRequires:  texlive-latex
+BuildRequires:  cmake >= 2.8
 @BuildRequires@
 
 URL:		@URL@
