--- a/libyui-qt-pkg/libyui-qt-pkg.spec.in
+++ b/libyui-qt-pkg/libyui-qt-pkg.spec.in
@@ -51,6 +51,8 @@ Provides:	lib@BASELIB@-qt = %{version}
 Provides:	yast2-qt-pkg = 2.42.0
 Obsoletes:	yast2-qt-pkg < 2.42.0
 
+Provides:	libyui_pkg
+
 URL:		@URL@
 Summary:	@SUMMARY@
 
