--- a/libyui/buildtools/template-doc.spec.in
+++ b/libyui/buildtools/template-doc.spec.in
@@ -30,6 +30,7 @@ BuildRequires:  graphviz-gnome
 BuildRequires:  texlive-latex
 BuildRequires:  cmake >= 2.8
 BuildRequires:  gcc-c++
+BuildRequires:  libyui-devel
 @BuildRequires@
 
 URL:		@URL@
