--- a/libyui/buildtools/template-doc.spec.in
+++ b/libyui/buildtools/template-doc.spec.in
@@ -75,6 +75,6 @@ rm -rf "$RPM_BUILD_ROOT"
 
 %files
 %defattr(-,root,root)
-%doc %{_docdir}/@PROJECTNAME@@SONAME_MAJOR@
+%doc %{_docdir}/@PROJECTNAME@
 
 %changelog
