--- a/libyui/buildtools/config.h.in
+++ b/libyui/buildtools/config.h.in
@@ -42,5 +42,7 @@
 #define THEMEDIR	"@PREFIX@/@THEME_DIR@"
 #define PLUGIN_PREFIX	"lib@BASELIB@-"
 #define PLUGIN_SUFFIX	".so.@SONAME_MAJOR@"
+#define LIBYUI_VERSION_NUM ((((@VERSION_MAJOR@)<<8)+(@VERSION_MINOR@))<<8)+(@VERSION_PATCH@) 
+#define LIBYUI_VERSION_AT_LEAST(M,N,O) LIBYUI_VERSION_NUM >= ((((M)<<8)+(N))<<8)+(O)
 
 #endif // @PROJECTNAME_UC@_CONFIG_H
