--- a/libyui-ncurses/yast2-ncurses.spec.in
+++ b/libyui-ncurses/yast2-ncurses.spec.in
@@ -5,14 +5,15 @@
 BuildRequires:	doxygen dejagnu gcc-c++ yast2-devtools 
 BuildRequires:	libxcrypt-devel blocxx-devel ncurses-devel
 
-Summary:	-
+Summary:	YaST2 - Character Based User Interface
 Provides:	yast2_ui
 Requires:	glibc-locale
 BuildRequires:	yast2-libyui-devel >= 2.21.1
 Requires:	yast2-libyui       >= 2.21.1
 Recommends:	yast2-ncurses-pkg
 %description
--
+This package contains the character based (ncurses) user interface
+component for YaST2.
 
 @HEADER-DEVEL@
 Summary:        -
@@ -20,7 +21,8 @@ Requires:	yast2-ncurses >= 2.16.15
 Requires:	ncurses-devel yast2-libyui-devel
 
 %description devel
--
+This package contains the character based (ncurses) user interface
+component for YaST2.
 
 @PREP@
 
