--- a/libyui-qt-graph/libyui-qt-graph.spec.in
+++ b/libyui-qt-graph/libyui-qt-graph.spec.in
@@ -26,6 +26,7 @@ BuildRequires:	cmake >= 2.8
 BuildRequires:  gcc-c++
 BuildRequires:  graphviz-devel >= 2.26.0
 BuildRequires:  libqt4-devel
+BuildRequires:  libyui-devel >= 3.0.0
 
 
 %define libyui_qt_devel_version	libyui-qt-devel >= 2.42.0
