use SONAME from libyui instead of VERSION.cmake if plugin

--- a/libyui/CMakeLists.txt
+++ b/libyui/CMakeLists.txt
@@ -49,14 +49,24 @@ ADD_DEFINITIONS(-DVERSION="${VERSION}")
 INCLUDE( "${CMAKE_CURRENT_SOURCE_DIR}/SOURCECONF.cmake" )
 
 SET_OPTIONS()
+
+IF( NOT DOCS_ONLY )
+  FIND_LIB_DEPENDENCIES()
+  FIND_LINKER_LIBS()
+ENDIF( NOT DOCS_ONLY )
+
+CHECK_PREFIX()
+
+IF( DOCS_ONLY )
+  FIND_PACKAGE( Libyui REQUIRED )
+  SET_SONAME()
+ENDIF( DOCS_ONLY )
+
 SET_ENVIRONMENT()
 SET_BUILD_FLAGS()
 SET_AUTODOCS()
 
 IF( NOT DOCS_ONLY )
-  FIND_LIB_DEPENDENCIES()
-  FIND_LINKER_LIBS()
-  CHECK_PREFIX()
   SET_SUBDIRS()
   GEN_EXPORTS()
   GEN_FILES()
