--- a/libyui-ncurses/CMakeLists.txt
+++ b/libyui-ncurses/CMakeLists.txt
@@ -25,7 +25,7 @@ if (GIT_VERSION)
     exec_program(
                  "${GIT_EXECUTABLE}"
                  ${CMAKE_CURRENT_SOURCE_DIR}
-                 ARGS "describe --tags"
+                 ARGS "describe"
 	         OUTPUT_VARIABLE GIT_VERSION )
 
     string( REGEX MATCH "-g[0-9|a-f]+$" VERSION_SHA1 ${GIT_VERSION} )
@@ -44,18 +44,29 @@ INCLUDE( "${CMAKE_CURRENT_SOURCE_DIR}/VERSION.cmake" )
 INITIALIZE()
 
 PROJECT( "${PROJECTNAME}" )
+ADD_DEFINITIONS(-DVERSION="${VERSION}")
 
 INCLUDE( "${CMAKE_CURRENT_SOURCE_DIR}/SOURCECONF.cmake" )
 
 SET_OPTIONS()
+
+IF( NOT DOCS_ONLY )
+  FIND_LIB_DEPENDENCIES()
+  FIND_LINKER_LIBS()
+ENDIF( NOT DOCS_ONLY )
+
+CHECK_PREFIX()
+
+IF( DOCS_ONLY )
+  FIND_PACKAGE( Libyui REQUIRED )
+  SET_SONAME()
+ENDIF( DOCS_ONLY )
+
 SET_ENVIRONMENT()
 SET_BUILD_FLAGS()
 SET_AUTODOCS()
 
 IF( NOT DOCS_ONLY )
-  FIND_LIB_DEPENDENCIES()
-  FIND_LINKER_LIBS()
-  CHECK_PREFIX()
   SET_SUBDIRS()
   GEN_EXPORTS()
   GEN_FILES()
