--- a/libyui-qt-graph/Makefile.cvs
+++ b/libyui-qt-graph/Makefile.cvs
@@ -2,19 +2,24 @@
 # Makefile.cvs
 #
 
-LIB = $(shell y2tool get-lib)
+all: configure
 
-PREFIX = /usr
-
-configure: 
+configure: clean
+	./bootstrap.sh ; \
 	mkdir build ; \
 	cd build ; \
-	cmake -DCMAKE_INSTALL_PREFIX=$(PREFIX) -DLIB=$(LIB) ..
+	cmake .. \
+	-DENABLE_WERROR=OFF \
+	-DCMAKE_BUILD_TYPE=RELEASE
 
 install: configure
-	cd build; \
+	cd build ; \
 	make && make install
 
-reconf: 
-	cd build ;\
+reconf:
+	cd build ; \
 	cmake rebuild_cache
+
+clean:
+	rm -rf build \
+		CMakeLists.txt
