--- a/libyui-qt-graph/libyui-qt-graph.spec.in
+++ b/libyui-qt-graph/libyui-qt-graph.spec.in
@@ -26,7 +26,7 @@ BuildRequires:	cmake >= 2.8
 BuildRequires:  gcc-c++
 BuildRequires:  graphviz-devel >= 2.26.0
 BuildRequires:  libqt4-devel
-BuildRequires:  libyui-devel >= 3.0.0
+BuildRequires:  libyui-devel >= 3.0.4
 
 
 %define libyui_qt_devel_version	libyui-qt-devel >= 2.42.0
@@ -80,6 +80,8 @@ This package has very few dependencies.
 
 export CFLAGS="$RPM_OPT_FLAGS -DNDEBUG"
 export CXXFLAGS="$RPM_OPT_FLAGS -DNDEBUG"
+
+./bootstrap.sh %{_prefix}
 
 mkdir build
 cd build
