calling bootstrap with curdir-prefixed

--- a/libyui/libyui.spec.in
+++ b/libyui/libyui.spec.in
@@ -76,7 +76,7 @@ This package has very few dependencies.
 
 %build
 
-bootstrap.sh
+./bootstrap.sh
 
 export CFLAGS="$RPM_OPT_FLAGS -DNDEBUG"
 export CXXFLAGS="$RPM_OPT_FLAGS -DNDEBUG"
