libyui.spec.in: Use LFS_CFLAGS for 32bit arch LFS support.

--- a/libyui/libyui.spec.in
+++ b/libyui/libyui.spec.in
@@ -78,8 +78,8 @@ This package has very few dependencies.
 
 ./bootstrap.sh
 
-export CFLAGS="$RPM_OPT_FLAGS -DNDEBUG"
-export CXXFLAGS="$RPM_OPT_FLAGS -DNDEBUG"
+export CFLAGS="$RPM_OPT_FLAGS -DNDEBUG $(getconf LFS_CFLAGS)"
+export CXXFLAGS="$RPM_OPT_FLAGS -DNDEBUG $(getconf LFS_CFLAGS)"
 
 mkdir build
 cd build
