--- a/libyui-ncurses/libyui-ncurses.spec.in
+++ b/libyui-ncurses/libyui-ncurses.spec.in
@@ -46,7 +46,7 @@ Requires:	lib@BASELIB@@SONAME_MAJOR@
 Provides:	lib@BASELIB@-ncurses = %{version}
 Provides:	yast2-ncurses = 2.42.0
 Obsoletes:	yast2-ncurses < 2.42.0
-Provides:	yui_backend
+Provides:	yui_backend = 5 
 
 URL:		@URL@
 Summary:	@SUMMARY@
