supplement libyui-qt (bnc#793893)
so that we get installed by default

Ported from the OBS commit
https://build.opensuse.org/request/show/202405

--- a/libyui-qt-graph/libyui-qt-graph.spec.in
+++ b/libyui-qt-graph/libyui-qt-graph.spec.in
@@ -43,6 +43,7 @@ Summary:	@SUMMARY@
 Group:		System/Libraries
 
 Requires:	lib@BASELIB@@SONAME_MAJOR@
+Supplements:	lib@BASELIB@-qt@SONAME_MAJOR@
 Provides:	lib@BASELIB@-qt-graph = %{version}
 
 Provides:	yast2-qt-graph = 2.42.0
