--- a/libyui/libyui.spec.in
+++ b/libyui/libyui.spec.in
@@ -1,7 +1,7 @@
 #
-# spec file for package @PROJECTNAME@ (Version @VERSION@)
+# spec file for package @PROJECTNAME@
 #
-# Copyright (c) 2012 SUSE LINUX Products GmbH, Nuernberg, Germany.
+# Copyright (c) 2014 SUSE LINUX Products GmbH, Nuernberg, Germany.
 #
 # All modifications and additions to the file contributed by third parties
 # remain the property of their copyright owners, unless otherwise agreed
@@ -15,38 +15,34 @@
 # Please submit bugfixes or comments via http://bugs.opensuse.org/
 #
 
-#
-#
-# norootforbuild
 
-Name:		@PROJECTNAME@
-Version:	@VERSION@
-Release:	0
-License:	LGPL-2.1 or LGPL-3.0
-Source:		@PROJECTNAME@-%{version}.tar.bz2
-Group:		System/Libraries
+Name:           @PROJECTNAME@
+Version:        @VERSION@
+Release:        0
+Source:         @PROJECTNAME@-%{version}.tar.bz2
 
-BuildRequires:	boost-devel
-BuildRequires:	cmake >= 2.8
-BuildRequires:	gcc-c++
-BuildRequires:	pkg-config
+BuildRequires:  boost-devel
+BuildRequires:  cmake >= 2.8
+BuildRequires:  gcc-c++
+BuildRequires:  pkg-config
 
-URL:		@URL@
-Summary:	@SUMMARY@
+Url:            @URL@
+Summary:        @SUMMARY@
+License:        LGPL-2.1 or LGPL-3.0
+Group:          System/Libraries
 
 %description
 @DESCRIPTION@
 
 %package -n @PROJECTNAME@@SONAME_MAJOR@
 
-Group:		System/Libraries
+Provides:       yast2-libyui = 2.42.0
+Obsoletes:      yast2-libyui < 2.42.0
+Requires:       yui_backend = 6
 
-Provides:	yast2-libyui = 2.42.0
-Obsoletes:	yast2-libyui < 2.42.0
-Requires:	yui_backend = 6
-
-URL:		@URL@
-Summary:	@PROJECTNAME_UC@ - @SUMMARY@
+Url:            @URL@
+Summary:        @PROJECTNAME_UC@ - @SUMMARY@
+Group:          System/Libraries
 
 %description -n @PROJECTNAME@@SONAME_MAJOR@
 @DESCRIPTION@
@@ -54,15 +50,14 @@ Summary:	@PROJECTNAME_UC@ - @SUMMARY@
 
 %package devel
 
-Group:		Development/Languages/C and C++
+Requires:       boost-devel
+Requires:       glibc-devel
+Requires:       libstdc++-devel
+Requires:       @PROJECTNAME@@SONAME_MAJOR@ = %{version}
 
-Requires:	@PROJECTNAME@@SONAME_MAJOR@ = %{version}
-Requires:	glibc-devel
-Requires:	libstdc++-devel
-Requires:	boost-devel
-
-URL:		@URL@
-Summary:	@PROJECTNAME_UC@ header files
+Url:            @URL@
+Summary:        @PROJECTNAME_UC@ header files
+Group:          Development/Languages/C and C++
 
 %description devel
 @DESCRIPTION@
@@ -73,7 +68,6 @@ This package has very few dependencies.
 
 %prep
 %setup -q -n @PROJECTNAME@-%{version}
-
 
 %build
 
@@ -87,20 +81,19 @@ cd build
 
 %if %{?_with_debug:1}%{!?_with_debug:0}
 cmake .. \
-	-DPREFIX=%{_prefix} \
-	-DDOC_DIR=%{_docdir} \
-	-DLIB_DIR=%{_lib} \
-	-DCMAKE_BUILD_TYPE=RELWITHDEBINFO
+        -DPREFIX=%{_prefix} \
+        -DDOC_DIR=%{_docdir} \
+        -DLIB_DIR=%{_lib} \
+        -DCMAKE_BUILD_TYPE=RELWITHDEBINFO
 %else
 cmake .. \
-	-DPREFIX=%{_prefix} \
-	-DDOC_DIR=%{_docdir} \
-	-DLIB_DIR=%{_lib} \
-	-DCMAKE_BUILD_TYPE=RELEASE
+        -DPREFIX=%{_prefix} \
+        -DDOC_DIR=%{_docdir} \
+        -DLIB_DIR=%{_lib} \
+        -DCMAKE_BUILD_TYPE=RELEASE
 %endif
 
 make %{?jobs:-j%jobs}
-
 
 %install
 cd build
