--- a/libyui/buildtools/Config.cmake.in
+++ b/libyui/buildtools/Config.cmake.in
@@ -21,7 +21,7 @@ IF( EXISTS "${@PROJECTNAME_UC_UPPER@_CMAKE_DIR}/CMakeCache.txt" )
    # In build tree
    INCLUDE( "${@PROJECTNAME_UC_UPPER@_CMAKE_DIR}/@PROJECTNAME_UC@BuildTreeSettings.cmake" )
 ELSE()
-   SET( @PROJECTNAME_UC_UPPER@_INCLUDE_DIRS "@INSTALL_INCLUDE_DIR_PREFIX@" )
+   SET( @PROJECTNAME_UC_UPPER@_INCLUDE_DIRS @INSTALL_INCLUDE_DIR_PREFIX@ @INSTALL_INCLUDE_DIR_PREFIX@/.. )
 ENDIF()
 
 # Our library dependencies (contains definitions for IMPORTED targets)
