Reformatted the spec files (templates) to match the OBS.
In particular, updated the copyright year.
/usr/lib/obs/service/format_spec_file --outdir .

--- a/libyui-qt-pkg/libyui-qt-pkg.spec.in
+++ b/libyui-qt-pkg/libyui-qt-pkg.spec.in
@@ -1,7 +1,7 @@
 #
-# spec file for package @PROJECTNAME@ (Version @VERSION@)
+# spec file for package @PROJECTNAME@
 #
-# Copyright (c) 2012 SUSE LINUX Products GmbH, Nuernberg, Germany.
+# Copyright (c) 2014 SUSE LINUX Products GmbH, Nuernberg, Germany.
 #
 # All modifications and additions to the file contributed by third parties
 # remain the property of their copyright owners, unless otherwise agreed
@@ -11,51 +11,51 @@
 # case the license is the MIT License). An "Open Source License" is a
 # license that conforms to the Open Source Definition (Version 1.9)
 # published by the Open Source Initiative.
-#
+
 # Please submit bugfixes or comments via http://bugs.opensuse.org/
 #
-#
-# norootforbuild
 
-Name:		@PROJECTNAME@
-Version:	@VERSION@
-Release:	0
-License:	LGPL-2.1 or LGPL-3.0
-Source:		@PROJECTNAME@-%{version}.tar.bz2
-Group:		System/Libraries
 
-BuildRequires:	boost-devel
-BuildRequires:	cmake >= 2.8
-BuildRequires:	gcc-c++
-BuildRequires:	pkg-config
-BuildRequires:	libqt5-qtbase-devel libqt5-qtsvg-devel libqt5-qtx11extras-devel
-BuildRequires:	libyui-devel >= 3.0.4
+Name:           @PROJECTNAME@
+Version:        @VERSION@
+Release:        0
+Source:         @PROJECTNAME@-%{version}.tar.bz2
 
-%define libyui_qt_devel_version	libyui-qt-devel >= 2.43.3
-BuildRequires:	%{libyui_qt_devel_version}
-%define libzypp_devel_version		libzypp-devel >= 12.5.0
-BuildRequires:	%{libzypp_devel_version}
+BuildRequires:  boost-devel
+BuildRequires:  cmake >= 2.8
+BuildRequires:  gcc-c++
+BuildRequires:  libqt5-qtbase-devel
+BuildRequires:  libqt5-qtsvg-devel
+BuildRequires:  libqt5-qtx11extras-devel
+BuildRequires:  libyui-devel >= 3.0.4
+BuildRequires:  pkg-config
 
-URL:		@URL@
-Summary:	@SUMMARY@
+%define libyui_qt_devel_version libyui-qt-devel >= 2.43.3
+BuildRequires:  %{libyui_qt_devel_version}
+%define libzypp_devel_version           libzypp-devel >= 12.5.0
+BuildRequires:  %{libzypp_devel_version}
+
+Url:            @URL@
+Summary:        @SUMMARY@
+License:        LGPL-2.1 or LGPL-3.0
+Group:          System/Libraries
 
 %description
 @DESCRIPTION@
 
 %package -n @PROJECTNAME@@SONAME_MAJOR@
 
-Group:		System/Libraries
+Requires:       lib@BASELIB@@SONAME_MAJOR@
+Provides:       lib@BASELIB@-qt-pkg = %{version}
 
-Requires:	lib@BASELIB@@SONAME_MAJOR@
-Provides:	lib@BASELIB@-qt-pkg = %{version}
+Provides:       yast2-qt-pkg = 2.42.0
+Obsoletes:      yast2-qt-pkg < 2.42.0
 
-Provides:	yast2-qt-pkg = 2.42.0
-Obsoletes:	yast2-qt-pkg < 2.42.0
+Provides:       libyui_pkg
 
-Provides:	libyui_pkg
-
-URL:		@URL@
-Summary:	@SUMMARY@
+Url:            @URL@
+Summary:        @SUMMARY@
+Group:          System/Libraries
 
 %description -n @PROJECTNAME@@SONAME_MAJOR@
 @DESCRIPTION@
@@ -63,14 +63,13 @@ Summary:	@SUMMARY@
 
 %package devel
 
-Group:		Development/Languages/C and C++
+Requires:       %{libyui_qt_devel_version}
+Requires:       %{libzypp_devel_version}
+Requires:       @PROJECTNAME@@SONAME_MAJOR@ = %{version}
 
-Requires:	@PROJECTNAME@@SONAME_MAJOR@ = %{version}
-Requires:	%{libyui_qt_devel_version}
-Requires:	%{libzypp_devel_version}
-
-URL:		@URL@
-Summary:	@PROJECTNAME_UC@ header files
+Url:            @URL@
+Summary:        @PROJECTNAME_UC@ header files
+Group:          Development/Languages/C and C++
 
 %description devel
 @DESCRIPTION@
@@ -81,7 +80,6 @@ This package has very few dependencies.
 
 %prep
 %setup -q -n @PROJECTNAME@-%{version}
-
 
 %build
 
@@ -95,20 +93,19 @@ cd build
 
 %if %{?_with_debug:1}%{!?_with_debug:0}
 cmake .. \
-	-DPREFIX=%{_prefix} \
-	-DDOC_DIR=%{_docdir} \
-	-DLIB_DIR=%{_lib} \
-	-DCMAKE_BUILD_TYPE=RELWITHDEBINFO
+        -DPREFIX=%{_prefix} \
+        -DDOC_DIR=%{_docdir} \
+        -DLIB_DIR=%{_lib} \
+        -DCMAKE_BUILD_TYPE=RELWITHDEBINFO
 %else
 cmake .. \
-	-DPREFIX=%{_prefix} \
-	-DDOC_DIR=%{_docdir} \
-	-DLIB_DIR=%{_lib} \
-	-DCMAKE_BUILD_TYPE=RELEASE
+        -DPREFIX=%{_prefix} \
+        -DDOC_DIR=%{_docdir} \
+        -DLIB_DIR=%{_lib} \
+        -DCMAKE_BUILD_TYPE=RELEASE
 %endif
 
 make %{?jobs:-j%jobs}
-
 
 %install
 cd build
